; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_configuration.c_config_get_default_camera.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_configuration.c_config_get_default_camera.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CAMERA_DEFAULT_DRIVER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"video4linux2\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"rwebcam\00", align 1
@.str.2 = private unnamed_addr constant [8 x i8] c"android\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"avfoundation\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"null\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @config_get_default_camera() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @CAMERA_DEFAULT_DRIVER, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  switch i32 %4, label %10 [
    i32 128, label %5
    i32 129, label %6
    i32 132, label %7
    i32 131, label %8
    i32 130, label %9
  ]

5:                                                ; preds = %0
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  br label %11

6:                                                ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8** %1, align 8
  br label %11

7:                                                ; preds = %0
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %11

8:                                                ; preds = %0
  store i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i8** %1, align 8
  br label %11

9:                                                ; preds = %0
  br label %10

10:                                               ; preds = %0, %9
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8** %1, align 8
  br label %11

11:                                               ; preds = %10, %8, %7, %6, %5
  %12 = load i8*, i8** %1, align 8
  ret i8* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
